--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "airtable-node": "^0.1.20",
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint-plugin-react-hooks": "^5.0.0-next-b14f8da15-20230403",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -28,6 +30,7 @@
     "eject": "react-scripts eject",
     "dev": "netlify dev"
   },
+  "proxy": "http://localhost:8090",
   "eslintConfig": {
     "extends": [
       "react-app",
