--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "airtable-node": "^0.1.20",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint-plugin-react-hooks": "^5.0.0-next-b14f8da15-20230403",
