--- a/package.json
+++ b/package.json
@@ -1,57 +1,67 @@
 {
-  "name": "comfy",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@auth0/auth0-react": "^2.0.0",
-    "@stripe/react-stripe-js": "^1.14.2",
-    "@stripe/stripe-js": "^1.42.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "airtable-node": "^0.1.20",
-    "axios": "^1.1.3",
-    "bootstrap": "^5.2.3",
-    "classnames": "^2.3.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "eslint-plugin-react-hooks": "^5.0.0-next-b14f8da15-20230403",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
-    "stripe": "^10.16.0",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "CI= react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "netlify dev"
-  },
-  "proxy": "http://localhost:8090",
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "netlify-cli": "^12.1.0"
-  }
+    "name": "comfy",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@auth0/auth0-react": "^2.0.0",
+        "@emotion/react": "^11.10.8",
+        "@emotion/styled": "^11.10.8",
+        "@iconify/react": "^4.1.0",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/lab": "^5.0.0-alpha.129",
+        "@mui/material": "^5.12.3",
+        "@stripe/react-stripe-js": "^1.14.2",
+        "@stripe/stripe-js": "^1.42.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "airtable-node": "^0.1.20",
+        "axios": "^1.1.3",
+        "bootstrap": "^5.2.3",
+        "classnames": "^2.3.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "eslint-plugin-react-hooks": "^5.0.0-next-b14f8da15-20230403",
+        "formik": "^2.2.9",
+        "framer-motion": "^10.12.8",
+        "latest": "^0.2.0",
+        "mui-tel-input": "^3.1.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0",
+        "react-scripts": "^5.0.1",
+        "stripe": "^10.16.0",
+        "styled-components": "^5.3.6",
+        "web-vitals": "^2.1.4",
+        "yup": "^1.1.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "CI= react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "dev": "netlify dev"
+    },
+    "proxy": "http://localhost:8080",
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "netlify-cli": "^12.1.0"
+    }
 }
