--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
         "latest": "^0.2.0",
         "mui-tel-input": "^3.1.3",
         "react": "^18.2.0",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
+        "react-redux": "^8.1.1",
         "react-router-dom": "^6.11.1",
         "react-scripts": "^5.0.1",
+        "react-toastify": "^9.1.3",
+        "redux": "^4.2.1",
+        "redux-thunk": "^2.4.2",
         "stripe": "^10.16.0",
         "styled-components": "^5.3.6",
         "web-vitals": "^2.1.4",
@@ -63,6 +68,7 @@
         ]
     },
     "devDependencies": {
-        "netlify-cli": "^12.1.0"
+        "netlify-cli": "^12.1.0",
+        "redux-devtools-extension": "^2.13.9"
     }
 }
